test: Added unit and integration test for login funtionality